--- a/vDo.Web/app/admin/appuser/appuser.html
+++ b/vDo.Web/app/admin/appuser/appuser.html
@@ -82,7 +82,7 @@
                         <div class="col-md-12">
 
                             <div class="panel panel-info">
-                                <div class="panel-heading"> With two column</div>
+                                <div class="panel-heading"> {{pageTitle}}</div>
                                 <div class="panel-wrapper collapse in" aria-expanded="true">
                                     <div class="panel-body">
                                         <form action="#">
