--- a/vDo.Web/index.html
+++ b/vDo.Web/index.html
@@ -65,7 +65,7 @@
                                 <div class="message-center">
                                     <a href="#">
                                         <div class="user-img">
-                                            <img src="includes/images/pawandeep.jpg" alt="user" class="img-circle">
+                                            <img src="#" class="img-circle">
                                             <span class="profile-status online pull-right"></span>
                                         </div>
                                         <div class="mail-contnet">
@@ -74,7 +74,7 @@
                                         </div>
                                     </a><a href="##">
                                         <div class="user-img">
-                                            <img src="includes/images/sonu.jpg" alt="user" class="img-circle">
+                                            <img src="#" alt="user" class="img-circle">
                                             <span class="profile-status busy pull-right"></span>
                                         </div>
                                         <div class="mail-contnet">
@@ -83,7 +83,7 @@
                                         </div>
                                     </a><a href="##">
                                         <div class="user-img">
-                                            <img src="includes/images/arijit.jpg" alt="user" class="img-circle">
+                                            <img src="#" alt="user" class="img-circle">
                                             <span class="profile-status away pull-right"></span>
                                         </div>
                                         <div class="mail-contnet">
@@ -92,7 +92,7 @@
                                         </div>
                                     </a><a href="##">
                                         <div class="user-img">
-                                            <img src="includes/images/pawandeep.jpg" alt="user" class="img-circle">
+                                            <img src="#" alt="user" class="img-circle">
                                             <span class="profile-status offline pull-right"></span>
                                         </div>
                                         <div class="mail-contnet">
@@ -164,16 +164,16 @@
                     <!-- /.dropdown -->
                     <li class="dropdown">
                         <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="##">
-                            <img src="includes/images/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b>
+                            <img src="#" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b>
                         </a>
                         <ul class="dropdown-menu dropdown-user animated flipInY">
-                            <li><a href="##"><i class="ti-user"></i>My Profile</a></li>
-                            <li><a href="##"><i class="ti-wallet"></i>My Balance</a></li>
-                            <li><a href="##"><i class="ti-email"></i>Inbox</a></li>
+                            <li><a href="#"><i class="ti-user"></i>My Profile</a></li>
+                            <li><a href="#"><i class="ti-wallet"></i>My Balance</a></li>
+                            <li><a href="#"><i class="ti-email"></i>Inbox</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="##"><i class="ti-settings"></i>Account Setting</a></li>
+                            <li><a href="#"><i class="ti-settings"></i>Account Setting</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="##"><i class="fa fa-power-off"></i>Logout</a></li>
+                            <li><a href="#"><i class="fa fa-power-off"></i>Logout</a></li>
                         </ul>
                         <!-- /.dropdown-user -->
                     </li>
@@ -420,8 +420,11 @@
 <script src="scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/angular-animate.min.js"></script>
 <script src="scripts/angular-file-upload.js"></script>
+    
+    <!--Application Service -->
+<script src="app/service/appuserService.js"></script>
 
-<!-- Application files-->
+    <!-- Application files-->
 <script src="app/app.js"></script>
 <script src="app/dashboard/dashboardCtrl.js"></script>
 <script src="app/admin/appuser/appuserCtrl.js"></script>
