cleared debuggine errors

--- a/vDo.Web/app/admin/appuser/appuser.html
+++ b/vDo.Web/app/admin/appuser/appuser.html
@@ -266,14 +266,15 @@
                     <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 96%;">
                         <ul class="m-t-20 chatonline" style="overflow: hidden; width: auto; height: 96%;">
                             <li><b>Chat option</b></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/varun.jpg" alt="user-img" class="img-circle"> <span>Varun Dhavan <small class="text-success">online</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/genu.jpg" alt="user-img" class="img-circle"> <span>Genelia Deshmukh <small class="text-warning">Away</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/ritesh.jpg" alt="user-img" class="img-circle"> <span>Ritesh Deshmukh <small class="text-danger">Busy</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/arijit.jpg" alt="user-img" class="img-circle"> <span>Arijit Sinh <small class="text-muted">Offline</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/govinda.jpg" alt="user-img" class="img-circle"> <span>Govinda Star <small class="text-success">online</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/hritik.jpg" alt="user-img" class="img-circle"> <span>John Abraham<small class="text-success">online</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/john.jpg" alt="user-img" class="img-circle"> <span>Hritik Roshan<small class="text-success">online</small></span></a></li>
-                            <li><a href="javascript:void(0)"><img src="../plugins/images/users/pawandeep.jpg" alt="user-img" class="img-circle"> <span>Pwandeep rajan <small class="text-success">online</small></span></a></li>
+                            
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt="user-img" class="img-circle"> <span>Varun Dhavan <small class="text-success">online</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt=" user-img" class="img-circle"> <span>Genelia Deshmukh <small class="text-warning">Away</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt="user-img" class="img-circle"> <span>Ritesh Deshmukh <small class="text-danger">Busy</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt="user-img" class="img-circle"> <span>Arijit Sinh <small class="text-muted">Offline</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt="user-img" class="img-circle"> <span>Govinda Star <small class="text-success">online</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt="user-img" class="img-circle"> <span>John Abraham<small class="text-success">online</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt=" user-img" class="img-circle"> <span>Hritik Roshan<small class="text-success">online</small></span></a></li>
+                            <li><a href="javascript:void(0)"><img src="includes/images/genu.jpg" alt="user-img" class="img-circle"> <span>Pwandeep rajan <small class="text-success">online</small></span></a></li>
                         </ul><div class="slimScrollBar" style="width: 0px; position: absolute; top: 0px; opacity: 0.4; display: block; border-radius: 7px; z-index: 99; right: 1px; background: rgb(220, 220, 220);"></div><div class="slimScrollRail" style="width: 0px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 0.2; z-index: 90; right: 1px; background: rgb(51, 51, 51);"></div>
                     </div>
                 </div>
