--- a/vDo.Web/index.html
+++ b/vDo.Web/index.html
@@ -164,7 +164,7 @@
                     <!-- /.dropdown -->
                     <li class="dropdown">
                         <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="##">
-                            <img src="#" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b>
+                            <img src="includes/images/genu.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b>
                         </a>
                         <ul class="dropdown-menu dropdown-user animated flipInY">
                             <li><a href="#"><i class="ti-user"></i>My Profile</a></li>
@@ -396,20 +396,20 @@
 <!--slimscroll JavaScript -->
 <script src="includes/libraries/jquery.slimscroll.js"></script>
 <!--Wave Effects -->
-<script src="includes/libraries/waves.js"></script>
+<!--<script src="includes/libraries/waves.js"></script>-->
 <!--Counter js -->
-<script src="includes/libraries/jquery.waypoints.js"></script>
-<script src="includes/libraries/jquery.counterup.min.js"></script>
+<!--<script src="includes/libraries/jquery.waypoints.js"></script>-->
+<!--<script src="includes/libraries/jquery.counterup.min.js"></script>-->
 <!--Morris JavaScript -->
 <!--    <script src="includes/libraries/raphael-min.js"></script>-->
 <!--    <script src="includes/libraries/morris.js"></script>-->
 <!-- Custom Theme JavaScript -->
 <script src="includes/scripts/custom.js"></script>
-<script src="includes/libraries/dashboard1.js"></script>
+<!--<script src="includes/libraries/dashboard1.js"></script>-->
 <!-- Sparkline chart JavaScript -->
-<script src="includes/libraries/jquery.sparkline.min.js"></script>
-<script src="includes/libraries/jquery.charts-sparkline.js"></script>
-<script src="includes/libraries/jquery.toast.js"></script>
+<!--<script src="includes/libraries/jquery.sparkline.min.js"></script>-->
+<!--<script src="includes/libraries/jquery.charts-sparkline.js"></script>-->
+<!--<script src="includes/libraries/jquery.toast.js"></script>-->
 
 <!-- libraries -->
 <script src="scripts/jquery-2.1.4.min.js"></script>
@@ -419,14 +419,14 @@
 <script src="scripts/angular-ui/ui-bootstrap.min.js"></script>
 <script src="scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
 <script src="scripts/angular-animate.min.js"></script>
-<script src="scripts/angular-file-upload.js"></script>
+
     
     <!--Application Service -->
-<script src="app/service/appuserService.js"></script>
+<!--<script src="app/service/appuserService.js"></script>-->
 
     <!-- Application files-->
 <script src="app/app.js"></script>
 <script src="app/dashboard/dashboardCtrl.js"></script>
-<script src="app/admin/appuser/appuserCtrl.js"></script>
+<!--<script src="app/admin/appuser/appuserCtrl.js"></script>-->
 
 </html>
