Removed the STYLE temporarily

--- a/vDo.Web/app/dashboard/dashboard.html
+++ b/vDo.Web/app/dashboard/dashboard.html
@@ -1,32 +1,14 @@
-﻿<div class="container-fluid">
-    <div class="row bg-title">
-        <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-            <h4 class="page-title">Starter Page</h4>
-        </div>
-        <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
-            <ol class="breadcrumb">
-                <li><a href="#">Dashboard</a></li>
-                <li class="active">Starter Page</li>
-            </ol>
-        </div>
-        <!-- /.col-lg-12 -->
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="white-box">
-                <h3 class="box-title">Blank Starter page</h3>
-                <h1>{{pageTitle}}</h1>
+﻿<div >
+    
+<h1>{{pageTitle}}</h1>
 
                 <p>
                     We are trying to learn the angularjs ui routing, really a very powerful,
-                    easy and interesting topic. Which we will extend to use the web api,
+                    easy and interesting tozpic. Which we will extend to use the web api,
                     entity framework to fetch the data from databasee
                 </p>
 
                 <h2>Message from controller</h2>
                 <p>{{message}}</p>
                 <p ng-bind="message"></p>
-            </div>
-        </div>
-    </div>
 </div>
